use inheritance for spcs-env